--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 							</a>
 						</div>
 						<div class="card-body">
-						<img src="img/solomilloalapimienta.jpg" class="img-fluid rounded mx-auto d-block" alt="solomilloalapimienta">
+						<img src="img/solomilloalapimienta.jpg" class="img-fluid rounded mx-auto d-block" alt="Solomillo a la Pimienta">
 						</div>
 						<div class="card-body">
 							<p class="text-center">¿Necesitas proteínas? Entonces este es tu sitio</p>
@@ -81,7 +81,7 @@
 							</a>
 						</div>
 						<div class="card-body">
-						<img src="img/hummus.jpg" class="img-fluid rounded mx-auto d-block" alt="hummus">
+						<img src="img/hummus.jpg" class="img-fluid rounded mx-auto d-block" alt="Hummus">
 						</div>
 						<div class="card-body">
 							<p class="text-center">¿Un poco de verde?</p>
