--- a/cat/verdura/ensaladagarbanzos.html
+++ b/cat/verdura/ensaladagarbanzos.html
@@ -31,13 +31,13 @@
 						<a class="text-warning nav-link" href="../carne/index.html">Carnes</a>
 					</li>
 					<li class="nav-item">
-						<a class="text-warning nav-link" href="../oriental/index.html">Oriental</a>
-					</li>
-					<li class="nav-item">
-						<a class="text-warning nav-link" href="#">| Ensalada de Garbanzos</a>
+						<a class="text-warning nav-link" href="#">| Hummus</a>
 					</li>
                     <li class="nav-item">
-						<a class="text-warning nav-link" href="../verdura/tempuradeverduras.html">Tempura de Verduras |</a>
+						<a class="text-warning nav-link" href="../verdura/tempuradeverduras.html">Espinacas a la Crema |</a>
+					</li>
+					<li class="nav-item">
+						<a class="text-warning nav-link" href="../oriental/index.html">Postres</a>
 					</li>
 				</ul>
 			</div>
