--- a/cat/carne/flamenquinescordobese.html
+++ b/cat/carne/flamenquinescordobese.html
@@ -28,16 +28,16 @@
 						<a class="text-warning nav-link" href="../../index.html">Inicio</a>
 					</li>
 					<li class="nav-item">
-						<a class="text-warning nav-link" href="#">| Flamenquines</a>
+						<a class="text-warning nav-link" href="#">| Carne con tomate</a>
 					</li>
 					<li class="nav-item">
-						<a class="text-warning nav-link" href="../carne/lomoalhorno.html">Lomo al Horno |</a>
-					</li>
-					<li class="nav-item">
-						<a class="text-warning nav-link" href="../oriental/index.html">Oriental</a>
+						<a class="text-warning nav-link" href="../carne/lomoalhorno.html">Solomillo de Cerdo |</a>
 					</li>
 					<li class="nav-item">
 						<a class="text-warning nav-link" href="../verdura/index.html">Verduras</a>
+					</li>
+					<li class="nav-item">
+						<a class="text-warning nav-link" href="../oriental/index.html">Postres</a>
 					</li>
 				</ul>
 			</div>
