--- a/cat/carne/lomoalhorno.html
+++ b/cat/carne/lomoalhorno.html
@@ -31,13 +31,13 @@
 						<a class="text-warning nav-link" href="../carne/flamenquinescordobese.html">| Flamenquines</a>
 					</li>
 					<li class="nav-item">
-						<a class="text-warning nav-link" href="#">Lomo al Horno |</a>
-					</li>
-					<li class="nav-item">
-						<a class="text-warning nav-link" href="../oriental/index.html">Oriental</a>
+						<a class="text-warning nav-link" href="#">Solomillo de Cerdo |</a>
 					</li>
 					<li class="nav-item">
 						<a class="text-warning nav-link" href="../verdura/index.html">Verduras</a>
+					</li>
+					<li class="nav-item">
+						<a class="text-warning nav-link" href="../oriental/index.html">Postres</a>
 					</li>
 				</ul>
 			</div>
