--- a/cat/oriental/index.html
+++ b/cat/oriental/index.html
@@ -32,13 +32,13 @@
 						<a class="text-warning nav-link" href="../carne/index.html">Carnes</a>
 					</li>
 					<li class="nav-item">
+						<a class="text-warning nav-link" href="../verdura/index.html">Verduras</a>
+					</li>
+                    <li class="nav-item">
 						<a class="text-warning nav-link" href="../oriental/rollitosdeprimavera.html">| Tarta de queso</a>
 					</li>
                     <li class="nav-item">
-						<a class="text-warning nav-link" href="../oriental/tallarinescongambas.html">Tallarines Con Gambas |</a>
-					</li>
-					<li class="nav-item">
-						<a class="text-warning nav-link" href="../verdura/index.html">Verduras</a>
+						<a class="text-warning nav-link" href="../oriental/tallarinescongambas.html">Coulant de Chocolate |</a>
 					</li>
 				</ul>
 			</div>
