--- a/cat/oriental/tallarinescongambas.html
+++ b/cat/oriental/tallarinescongambas.html
@@ -31,13 +31,13 @@
 						<a class="text-warning nav-link" href="../carne/index.html">Carnes</a>
 					</li>
 					<li class="nav-item">
-						<a class="text-warning nav-link" href="../oriental/rollitosdeprimavera.html">| Rollitos de Primavera</a>
-					</li>
-                    <li class="nav-item">
-						<a class="text-warning nav-link" href="#">Tallarines Con Gambas |</a>
+						<a class="text-warning nav-link" href="../verdura/index.html">Verduras</a>
 					</li>
 					<li class="nav-item">
-						<a class="text-warning nav-link" href="../verdura/index.html">Verduras</a>
+						<a class="text-warning nav-link" href="../oriental/rollitosdeprimavera.html">| Tarta de Queso</a>
+					</li>
+                    <li class="nav-item">
+						<a class="text-warning nav-link" href="#">Coulant de Chocolate |</a>
 					</li>
 				</ul>
 			</div>
