--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 						<a class="text-warning nav-link" href="cat/carne/index.html">Carnes</a>
 					</li>
 					<li class="nav-item">
-						<a class="text-warning nav-link" href="cat/oriental/index.html">Oriental</a>
+						<a class="text-warning nav-link" href="cat/verdura/index.html">Verduras</a>
 					</li>
 					<li class="nav-item">
-						<a class="text-warning nav-link" href="cat/verdura/index.html">Verduras</a>
+						<a class="text-warning nav-link" href="cat/oriental/index.html">Postres</a>
 					</li>
 				</ul>
 			</div>
