--- a/cat/postres/coulant.html
+++ b/cat/postres/coulant.html
@@ -28,16 +28,16 @@
                         <a class="text-warning nav-link" href="../../index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="text-warning nav-link" href="../carne/flamenquinescordobese.html">| Flamenquines</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="text-warning nav-link" href="#">Solomillo de Cerdo |</a>
+                        <a class="text-warning nav-link" href="../carne/index.html">Carnes</a>
                     </li>
                     <li class="nav-item">
                         <a class="text-warning nav-link" href="../verdura/index.html">Verduras</a>
                     </li>
                     <li class="nav-item">
-                        <a class="text-warning nav-link" href="../postres/index.html">Postres</a>
+                        <a class="text-warning nav-link" href="../postres/tartadequeso.html">| Tarta de Queso</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="text-warning nav-link" href="#">Coulant de Chocolate |</a>
                     </li>
                 </ul>
             </div>
@@ -48,37 +48,61 @@
         <div class="container mx-auto">
             <div class="card border-0 shadow my-5">
                 <div class="card-header p-5 ">
-                    <h1>SOLOMILLO A LA PIMIENTA</h1>
+                    <h1>Coulant de chocolate</h1>
                 </div>
                 <div>
                     <div class="card-body">
-
-                        <img src="../../img/solomilloalapimienta.jpg" alt="Solomillo a la pimienta"
-                            class="img-fluid rounded mx-auto d-block">
+                        <img src="../../img/coulant.jpg" alt="Coulant" class="img-fluid rounded mx-auto d-block">
                     </div>
                     <div class="card-body">
                         <h3>INGREDIENTES (4 personas):</h3>
                         <ul>
-                            <li>2 solomillos de cerdo</li>
-                            <li>2 cucharadas de pimienta verde (la que viene en tarro con líquido)</li>
-                            <li>150 ml de brandy o de vino oloroso (hay quién le pone whisky)</li>
-                            <li>400 ml de nata líquida para cocinar o leche evaporada</li>
-                            <li>Sal</li>
-                            <li>Aceite de oliva virgen extra</li>
+                            <li>4150 gr de chocolate para postres</li>
+                            <li>150 gr de mantequilla sin sal.</li>
+                            <li>4 huevos.</li>
+                            <li>100 gr de azúcar.</li>
+                            <li>70 gr de harina de trigo.</li>
+                            <li>Helado a tu gusto para acompañar, opcional.</li>
                         </ul>
                     </div>
                     <div class="card-body">
                         <h3>ELABORACIÓN:</h3>
-                        <p><strong>1.-</strong> Lo primero Con el cuchillo retiramos el exceso de grasa del solomillo y
-                            cortamos en medallones.</p>
-                        <p><strong>2.-</strong> Ponemos en una sartén un poco de aceite de oliva virgen extra, los
-                            medallones de carne y con un poco de sal y la pimienta verde, cocinamos la carne por ambos
-                            lados.</p>
-                        <p><strong>3.-</strong> Añadimos el brandy, podemos flambear o dejarlo unos minutos para que se
-                            evapore el alcohol.</p>
-                        <p><strong>4.-</strong> Incorporamos la nata líquida para cocinar y mezclamos bien moviendo la
-                            sartén.</p>
-                        <p><strong>5.-</strong> Dejamos que se cocine hasta que la salsa se reduzca.!</p>
+                        <p><strong>1.-</strong> Pon en un bol el chocolate troceado y la mantequilla. Introduce el bol
+                            en el microondas durante un minuto a potencia máxima, saca el bol y remueve el contenido con
+                            una cuchara o espátula.</p>
+                        <p><strong>2.-</strong> Vuelve a introducir en el microondas otro minuto, sácalo y revuélvelo
+                            todo de nuevo. Si aún no se ha derretido todo puedes poner el bol unos segundos más en el
+                            microondas, pero no te pases de tiempo porque si quemas el chocolate te amargará toda la
+                            mezcla, es mucho mejor ir poco a poco.</p>
+                        <p><strong>3.-</strong> Cuando esté todo más o menos derretido, remueve con una cuchara o lengua
+                            de cocina hasta que la mezcla sea homogénea.</p>
+                        <p><strong>4.-</strong> En otro bol bate los huevos con el azúcar con la ayuda de unas varillas
+                            hasta que el azúcar se haya disuelto y la mezcla sea espumosa y de un color claro.</p>
+                        <p><strong>5.-</strong> Incorpora los huevos con el azúcar ya mezclados al bol con el chocolate
+                            y la mantequilla, y mézclalo todo bien.</p>
+                        <p><strong>6.-</strong> Añade la harina tamizada, es decir, haciéndola pasar por un colador para
+                            que no caiga con grumos ni apelmazamientos, y remueve la mezcla para que quede homogénea.
+                        </p>
+                        <p><strong>7.-</strong> Ahora vierte la mezcla en los moldes de silicona para coulant hasta
+                            cubrirlos un poco más de la mitad, y congélalos al menos 2 horas.</p>
+                        <p><strong>8.-</strong> Cuando los vayas a preparar, precalienta el horno a 190ºC con calor
+                            arriba y abajo y ventilador, y cuando haya alcanzado esa temperatura introduce los coulant
+                            en él en una posición media sobre una bandeja de horno.</p>
+                        <p><strong>9.-</strong> El tiempo de horneado es la clave para obtener el coulant perfecto y,
+                            sin embargo, necesitamos experimentar un poco antes de saber cuál es ya que cada horno es un
+                            mundo. Yo he necesitado unos 16-17 minutos para que estén listos los coulant, pero os
+                            recomiendo hacer una prueba con un coulant la primera vez y hornearlo ese tiempo. Si después
+                            del tiempo de reposo y haberlo desmoldado (te explico a continuación cómo hacerlo) está
+                            demasiado hecho, ya sabes que necesitas rebajar el tiempo 1 o 2 minutos, y si por el
+                            contrario está demasiado líquido y es complicado desmoldarlo sin romperlo, la próxima vez
+                            dale 1 o 2 minutos más.</p>
+                        <p><strong>10.-</strong> Una vez horneados los coulant, sácalos del horno y déjalos reposar al
+                            menos 5 minutos. Una buena señal es que se vean cuajados aunque con el centro superior un
+                            poco más oscuro y «bailongo», y que se hayan separado de las paredes del molde.</p>
+                        <p><strong>11.-</strong> Para desmoldar yo recomiendo la técnica usada para darles la vuelta a
+                            la tortilla (sobre todo para quienes nos gusta que el interior del coulant esté muy
+                            líquido): coloca un plato del revés encima del molde y dale rápidamente la vuelta, te deberá
+                            quedar perfecto en el plato.</p>
                     </div>
                 </div>
             </div>
