--- a/cat/postres/index.html
+++ b/cat/postres/index.html
@@ -7,43 +7,43 @@
     <link rel="Shortcut Icon" href="../../img/log.png" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <link rel="stylesheet" href="../../css/bootstrap.css" type="text/css" />
-    <title>Oriental</title>
+    <title>postres</title>
 </head>
 
 <body class="bg-warning">
 
     <header class="container-fluid bg-dark">
-		<nav class="navbar navbar-dark bg-dark">
-			<a href="../../index.html"><img src="img/logo_cabeza.png" alt="Logo"></a>
+        <nav class="navbar navbar-dark bg-dark">
+            <a href="../../index.html"><img src="img/logo_cabeza.png" alt="Logo"></a>
 
-			<div class="text-success display-4 font-weight-bold font-italic text-fluid">Recetas de la Abuela</div>
+            <div class="text-success display-4 font-weight-bold font-italic text-fluid">Recetas de la Abuela</div>
 
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample01"
-				aria-controls="navbarsExample01" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-            
-			<div class="collapse navbar-collapse  navbar-expand-sm" id="navbarsExample01">
-				<ul class="navbar-nav mr-auto">
-					<li class="nav-item">
-						<a class="text-warning nav-link" href="../../index.html">Inicio</a>
-					</li>
-					<li class="nav-item">
-						<a class="text-warning nav-link" href="../carne/index.html">Carnes</a>
-					</li>
-					<li class="nav-item">
-						<a class="text-warning nav-link" href="../verdura/index.html">Verduras</a>
-					</li>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample01"
+                aria-controls="navbarsExample01" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse  navbar-expand-sm" id="navbarsExample01">
+                <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-						<a class="text-warning nav-link" href="../oriental/rollitosdeprimavera.html">| Tarta de queso</a>
-					</li>
+                        <a class="text-warning nav-link" href="../../index.html">Inicio</a>
+                    </li>
                     <li class="nav-item">
-						<a class="text-warning nav-link" href="../oriental/tallarinescongambas.html">Coulant de Chocolate |</a>
-					</li>
-				</ul>
-			</div>
-		</nav>
-	</header>
+                        <a class="text-warning nav-link" href="../carne/index.html">Carnes</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="text-warning nav-link" href="../verdura/index.html">Verduras</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="text-warning nav-link" href="../postres/tartadequeso.html">| Tarta de queso</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="text-warning nav-link" href="../postres/coulant.html">Coulant de Chocolate |</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
 
     <div>
         <div class="container-fluid">
@@ -52,33 +52,35 @@
                     <p class="col font-weight-light text-center display-2 card-header p-5">POSTRES</p>
 
                     <div class="row">
-                        						<!--Falta Imagen-->
 
-                        <a class="col-xs col-md-6" href="rollitosdeprimavera.html"><img
-                                src="../../img/tartadequeso.jpg" alt="Tarta de queso"
-                                class="col-12 rounded"></a>
+                        <a class="col-xs col-md-6" href="tartadequeso.html"><img src="../../img/tartadequeso.jpg"
+                                alt="Tarta de queso" class="col-12 rounded"></a>
                         <div class="row col-xs col-md-6">
-                            <a class="col" href="rollitosdeprimavera.html">
+                            <a class="col" href="tartadequeso.html">
                                 <p class="col display-4 m-5 text-center card-header p-5">Tarta de queso</p>
                             </a>
-                            <p>Esta  receta que os traigo hoy es una de nuestras recetas de postres favoritas,
-                                las primeras referencias escritas que se tienen de una tarta de queso son de la 
-                                Antigua Grecia, eran un rico aporte proteico a base de queso y realmente el sabor 
-                                de la receta original difiere mucho de las que hacemos hoy en día, la receta original se extendió por Europa, los inmigrantes 
-                                que viajaron a América la trasladaron allí  y de hay derivaron las recetas de hoy en día.
+                            <p>Esta receta que os traigo hoy es una de nuestras recetas de postres favoritas,
+                                las primeras referencias escritas que se tienen de una tarta de queso son de la
+                                Antigua Grecia, eran un rico aporte proteico a base de queso y realmente el sabor
+                                de la receta original difiere mucho de las que hacemos hoy en día, la receta original se
+                                extendió por Europa, los inmigrantes
+                                que viajaron a América la trasladaron allí y de hay derivaron las recetas de hoy en día.
                             </p>
                         </div>
 
                         <p class="col-12"></p>
-						<!--Falta Imagen-->
 
-                        <a class="col-xs col-md-6" href="tallarinescongambas.html"><img
-                                src="../../img/coulant.jpg" alt="Lomo" class="col-12 rounded"></a>
+                        <a class="col-xs col-md-6" href="coulant.html"><img src="../../img/coulant.jpg" alt="Lomo"
+                                class="col-12 rounded"></a>
                         <div class="row col-xs col-md-6">
-                            <a class="col" href="tallarinescongambas.html">
+                            <a class="col" href="coulant.html">
                                 <p class="col display-4 m-5 text-center card-header p-5">Coulant de chocolate</p>
                             </a>
-                            <p>Estos coulant de chocolate, también llamados volcán de chocolate, son una de las recetas más fáciles y deliciosas para los auténticos chocolateros, con su cascada de chocolate caliente y líquido brotando del interior, y encima súper fáciles de preparar. Tan solo tienes que cogerle el truquillo a tu horno para acertar con los minutos de cocción y ¡listo!</p>
+                            <p>Estos coulant de chocolate, también llamados volcán de chocolate, son una de las recetas
+                                más fáciles y deliciosas para los auténticos chocolateros, con su cascada de chocolate
+                                caliente y líquido brotando del interior, y encima súper fáciles de preparar. Tan solo
+                                tienes que cogerle el truquillo a tu horno para acertar con los minutos de cocción y
+                                ¡listo!</p>
                         </div>
                     </div>
                 </div>
@@ -101,19 +103,16 @@
             </div>
 
             <div class="col justify-content-center text-center col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
-                <h5 class="text-white">AUTORES</h5>
-                <a class="text-white" href="https://moiruz.github.io/">Moisés Cañete</a><br />
+                <h5 class="text-white">CREADORES</h5>
+                <a class="text-white" href="https://github.com/TitoYus">Rafael Yuste</a><br />
                 <a class="text-white" href="https://a19camoan.github.io/">Andrés Castillero</a><br />
-                <a class="text-white" href="https://manuelsolar.github.io/">Manuel Solar</a><br />
-                <a class="text-white" href="https://sergiovj2001.github.io/">Sergio Vera</a><br />
+                <a class="text-white" href="https://github.com/alejandrorabadan">Alejandro Rabadán</a><br />
             </div>
 
             <div class="col justify-content-end col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
                 <div class=float-right>
                     <a href="https://www.facebook.com/rdabuela.abuela.3"><img src="../../img/facebook.png"
                             alt="Facebook_logo"></a>
-                            <!--https://github.com/TitoYus
-                            https://github.com/alejandrorabadan-->
                     <a href="https://www.instagram.com/rdabuela/"><img src="../../img/instagram.png"
                             alt="Intagram_logo"></a>
                     <a href="https://www.pinterest.es/rdladaw2020/"><img src="../../img/pinterest.png"
