--- a/cat/postres/tartadequeso.html
+++ b/cat/postres/tartadequeso.html
@@ -7,11 +7,10 @@
     <link rel="Shortcut Icon" href="../../img/log.png" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <link rel="stylesheet" href="../../css/bootstrap.css" type="text/css" />
-    <title>Verduras</title>
+    <title>Recetas de la abuela</title>
 </head>
 
 <body class="bg-warning">
-
     <header class="container-fluid bg-dark">
         <nav class="navbar navbar-dark bg-dark">
             <a href="../../index.html"><img src="img/logo_cabeza.png" alt="Logo"></a>
@@ -32,14 +31,13 @@
                         <a class="text-warning nav-link" href="../carne/index.html">Carnes</a>
                     </li>
                     <li class="nav-item">
-                        <a class="text-warning nav-link" href="../verdura/ensaladagarbanzos.html">| Hummus</a>
+                        <a class="text-warning nav-link" href="../verdura/index.html">Verduras</a>
                     </li>
                     <li class="nav-item">
-                        <a class="text-warning nav-link" href="../verdura/tempuradeverduras.html">Espinacas a la Crema
-                            |</a>
+                        <a class="text-warning nav-link" href="#">| Tarta de queso</a>
                     </li>
                     <li class="nav-item">
-                        <a class="text-warning nav-link" href="../postres/index.html">Postres</a>
+                        <a class="text-warning nav-link" href="../postres/coulant.html">Coulant de Chocolate |</a>
                     </li>
                 </ul>
             </div>
@@ -47,54 +45,60 @@
     </header>
 
     <div>
-        <div class="container-fluid">
+        <div class="container mx-auto">
             <div class="card border-0 shadow my-5">
-                <div class="row card-body p-5">
-                    <p class="col font-weight-light text-center display-2 card-header p-5">VERDURAS</p>
-
-                    <div class="row">
-                        <a class="col-xs col-md-6" href="ensaladagarbanzos.html"><img src="../../img/hummus.jpg"
-                                alt="Hummus" class="col-12 rounded"></a>
-                        <div class="row col-xs col-md-6">
-                            <a class="col" href="ensaladagarbanzos.html">
-                                <p class="col display-4 m-5 text-center card-header p-5">Hummus</p>
-                            </a>
-                            <p> El hummus es un puré de garbanzos, muy saludable.
-                                Es bajo en grasa y rico en hierro, ácido fólico y vitaminas B6 y C.
-                                Además, contiene mucha proteína, fibra, zinc y calcio, entre otras cosas.
-                                Un plato muy fresquito y ligero.
-                            </p>
-                        </div>
-
-                        <p class="col-12"></p>
-
-                        <a class="col-xs col-md-6" href="tempuradeverduras.html"><img
-                                src="../../img/espinacasalacrema.jpg" alt="Espinacas a la crema"
-                                class="col-12 rounded"></a>
-                        <div class="row col-xs col-md-6">
-                            <a class="col" href="tempuradeverduras.html">
-                                <p class="col display-4 m-5 text-center card-header p-5">Espinacas a la crema</p>
-                            </a>
-                            <p>Estas espinacas a la crema gratinadas tienen un puntito cremoso que me encanta,
-                                quedan muy suaves de sabor, y al salir del horno ves la delicia en la que se han
-                                convertido con el queso por encima.</p>
-                        </div>
+                <div class="card-header p-5 ">
+                    <h1>Tarta de queso</h1>
+                </div>
+                <div>
+                    <div class="card-body">
+                        <img src="../../img/tartadequeso.jpg" alt="Rollitos de primavera"
+                            class="img-fluid rounded mx-auto d-block">
+                    </div>
+                    <div class="card-body">
+                        <h3>INGREDIENTES (4 personas):</h3>
+                        <ul>
+                            <li>2 paquetes de galletas</li>
+                            <li>100 gr. de mantequilla (temperatura ambiente)</li>
+                            <li>1 paquete de cacahuetes con miel</li>
+                            <li>400 gr. de nata liquida para montar 35% materia grasa</li>
+                            <li>100 gr. de azúcar</li>
+                            <li>2 sobres de cuajada</li>
+                            <li>500 gr de queso de untar</li>
+                            <li>Mermelada</li>
+                        </ul>
+                    </div>
+                    <div class="card-body">
+                        <h3>ELABORACIÓN:</h3>
+                        <p><strong>1.-</strong> Trocear las galletas en pequeñas porciones, hasta hacerlas polvo,
+                            mezclar con la mantequilla y los cacahuetes y formar una masa que nos sirva como base.</p>
+                        <p><strong>2.-</strong> Colocar la masa creada con las galletas y la mantequilla en la base del
+                            molde, cubriendo toda la base de forma homogénea.</p>
+                        <p><strong>3.-</strong> Dejar enfriar en la nevera unos 15/20 minutos serán suficientes para
+                            conseguir una base estable y fuerte.</p>
+                        <p><strong>4.-</strong> Calentar la nata en un cazo a fuego lento, incorporar el azúcar y
+                            remover con la nata, el queso, incorporar las cuajadas, diluidas en un poco de leche.
+                            Remover todos los ingredientes, en el momento que la mezcla comienza a hervir, apartar del
+                            fuego. Echar en el molde con la base de galleta.Dejaremos enfriar en la nevera unas 6 horas
+                            aproximadamente.</p>
+                        <p><strong>5.-</strong> Decorar la superficie de la tarta con mermelada de fresas.
+                            Des-moldaremos la tarta de queso y estará lista para degustar.</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <footer class="bg-secondary">
-        <div class="row container-fluid">
+
+    <footer>
+        <div class="row bg-secondary">
 
             <div class=" col justify-content-start text-left col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
                 <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img
                         alt="Licencia de Creative Commons" style="border-width:0"
                         src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /></a><br /><a class="text-white">Esta
                     obra
-                    está bajo una</a><br /><a rel="license"
-                    href="http://creativecommons.org/licenses/by-nc/4.0/">licencia
-                    de
+                    está bajo una</a> <br /><a rel="license"
+                    href="http://creativecommons.org/licenses/by-nc/4.0/">licencia de
                     Creative
                     Commons<br /> Reconocimiento-NoComercial 4.0 Internacional</a>
             </div>
@@ -106,14 +110,14 @@
                 <a class="text-white" href="https://github.com/alejandrorabadan">Alejandro Rabadán</a><br />
             </div>
 
-            <div class="col justify-content-end col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
+            <div class=" col justify-content-end col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
                 <div class=float-right>
-                    <a href="https://www.facebook.com/rdabuela.abuela.3"><img src="../../img/facebook.png"
-                            alt="Facebook_logo"></a>
-                    <a href="https://www.instagram.com/rdabuela/"><img src="../../img/instagram.png"
-                            alt="Intagram_logo"></a>
-                    <a href="https://www.pinterest.es/rdladaw2020/"><img src="../../img/pinterest.png"
-                            alt="Pinterest_logo"></a>
+                    <a href="https://www.facebook.com/rdabuela.abuela.3"><img alt="Facebook"
+                            src="../../img/facebook.png"></a>
+                    <a href="https://www.instagram.com/rdabuela/"><img alt="Instagram"
+                            src="../../img/instagram.png"></a>
+                    <a href="https://www.pinterest.es/rdladaw2020/"><img alt="Pinterest"
+                            src="../../img/pinterest.png"></a>
                 </div>
             </div>
         </div>
