--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <a class="text-warning nav-link" href="cat/verdura/index.html">Verduras</a>
                     </li>
                     <li class="nav-item">
-                        <a class="text-warning nav-link" href="cat/oriental/index.html">Postres</a>
+                        <a class="text-warning nav-link" href="cat/postres/index.html">Postres</a>
                     </li>
                 </ul>
             </div>
@@ -75,7 +75,7 @@
                             <p class="text-center">¿Un poco de verde?</p>
                             <div class="card-fluid">
                                 <div class="card-header">
-                                    <a href="cat/oriental/index.html" class="img-fluid">
+                                    <a href="cat/postres/index.html" class="img-fluid">
                                         <h3 class="text-center">Postres</h3>
                                     </a>
                                 </div>
@@ -108,9 +108,9 @@
 
                 <div class="col justify-content-center text-center col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
                     <h5 class="text-white">CREADORES</h5>
-                    <a class="text-white" href="#">Rafael Yuste</a><br />
+                    <a class="text-white" href="https://github.com/TitoYus">Rafael Yuste</a><br />
                     <a class="text-white" href="https://a19camoan.github.io/">Andrés Castillero</a><br />
-                    <a class="text-white" href="#">Alejandro Rabadán</a><br />
+                    <a class="text-white" href="https://github.com/alejandrorabadan">Alejandro Rabadán</a><br />
                 </div>
 
                 <div class="col justify-content-end col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
