--- a/cat/carne/flamenquinescordobese.html
+++ b/cat/carne/flamenquinescordobese.html
@@ -37,7 +37,7 @@
 						<a class="text-warning nav-link" href="../verdura/index.html">Verduras</a>
 					</li>
 					<li class="nav-item">
-						<a class="text-warning nav-link" href="../oriental/index.html">Postres</a>
+						<a class="text-warning nav-link" href="../postres/index.html">Postres</a>
 					</li>
 				</ul>
 			</div>
@@ -99,12 +99,11 @@
 				</div>
 					
 				<div class="col justify-content-center text-center col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
-					<h5 class="text-white">AUTORES</h5>
-					<a class="text-white" href="https://moiruz.github.io/">Moisés Cañete</a><br/>
-					<a class="text-white" href="https://a19camoan.github.io/">Andrés Castillero</a><br/>
-					<a class="text-white" href="https://manuelsolar.github.io/">Manuel Solar</a><br/>
-					<a class="text-white" href="https://sergiovj2001.github.io/">Sergio Vera</a><br/>
-				</div>
+                    <h5 class="text-white">CREADORES</h5>
+                    <a class="text-white" href="https://github.com/TitoYus">Rafael Yuste</a><br />
+                    <a class="text-white" href="https://a19camoan.github.io/">Andrés Castillero</a><br />
+                    <a class="text-white" href="https://github.com/alejandrorabadan">Alejandro Rabadán</a><br />
+                </div>
 
 				<div class=" col justify-content-end col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
 					<div class=float-right>
