--- a/cat/carne/index.html
+++ b/cat/carne/index.html
@@ -13,37 +13,38 @@
 <body class="bg-warning">
 
     <header class="container-fluid bg-dark">
-		<nav class="navbar navbar-dark bg-dark">
-			<a href="../../index.html"><img src="img/logo_cabeza.png" alt="Logo"></a>
+        <nav class="navbar navbar-dark bg-dark">
+            <a href="../../index.html"><img src="img/logo_cabeza.png" alt="Logo"></a>
 
-			<div class="text-success display-4 font-weight-bold font-italic text-fluid">Recetas de la Abuela</div>
+            <div class="text-success display-4 font-weight-bold font-italic text-fluid">Recetas de la Abuela</div>
 
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample01"
-				aria-controls="navbarsExample01" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-            
-			<div class="collapse navbar-collapse  navbar-expand-sm" id="navbarsExample01">
-				<ul class="navbar-nav mr-auto">
-					<li class="nav-item">
-						<a class="text-warning nav-link" href="../../index.html">Inicio</a>
-					</li>
-					<li class="nav-item">
-						<a class="text-warning nav-link" href="../carne/flamenquinescordobese.html">| Carne con tomate</a>
-					</li>
-					<li class="nav-item">
-						<a class="text-warning nav-link" href="../carne/lomoalhorno.html">Solomillo de Cerdo |</a>
-					</li>
-					<li class="nav-item">
-						<a class="text-warning nav-link" href="../verdura/index.html">Verduras</a>
-					</li>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample01"
+                aria-controls="navbarsExample01" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse  navbar-expand-sm" id="navbarsExample01">
+                <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-						<a class="text-warning nav-link" href="../oriental/index.html">Postres</a>
-					</li>
-				</ul>
-			</div>
-		</nav>
-	</header>
+                        <a class="text-warning nav-link" href="../../index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="text-warning nav-link" href="../carne/flamenquinescordobese.html">| Carne con
+                            tomate</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="text-warning nav-link" href="../carne/lomoalhorno.html">Solomillo de Cerdo |</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="text-warning nav-link" href="../verdura/index.html">Verduras</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="text-warning nav-link" href="../postres/index.html">Postres</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
 
     <div>
         <div class="container-fluid mx-auto">
@@ -52,35 +53,37 @@
                     <p class="col font-weight-light text-center display-2 card-header p-5">CARNES</p>
 
                     <div class="row">
-                        						<!--Falta Imagen-->
 
-                        <a class="col-xs col-md-6" href="flamenquinescordobese.html"><img src="../../img/carnecontomate.jpg"
-                                alt="Flamenquines_cordobeses" class="col-12 rounded img-fluid"></a>
+                        <a class="col-xs col-md-6" href="flamenquinescordobese.html"><img
+                                src="../../img/carnecontomate.jpg" alt="Flamenquines_cordobeses"
+                                class="col-12 rounded img-fluid"></a>
                         <div class="row col-xs col-md-6">
-                        <a class="col" href="flamenquinescordobese.html">
-                            <p class="col display-4 m-5 text-center card-header p-5">Carne con tomate</p>
-                        </a>
-                        <p>La carne con tomate es una receta tradicional muy típica de la gastronomía andaluza
-                            y se suele preparar con carne de cerdo o con carne de ternera.Se prepara de forma 
-                            muy sencilla y el reposo le sienta genial así que te animo a que la prepares de un día para otro. 
-                            Para comerla no pueden faltar unas buenas rebanadas de pan para no dejar ni gota de 
-                            la riquísima salsa de tomate casera que la acompaña.
-                        </p>
+                            <a class="col" href="flamenquinescordobese.html">
+                                <p class="col display-4 m-5 text-center card-header p-5">Carne con tomate</p>
+                            </a>
+                            <p>La carne con tomate es una receta tradicional muy típica de la gastronomía andaluza
+                                y se suele preparar con carne de cerdo o con carne de ternera.Se prepara de forma
+                                muy sencilla y el reposo le sienta genial así que te animo a que la prepares de un día
+                                para otro.
+                                Para comerla no pueden faltar unas buenas rebanadas de pan para no dejar ni gota de
+                                la riquísima salsa de tomate casera que la acompaña.
+                            </p>
                         </div>
 
                         <p class="col-12"></p>
 
-                        						<!--Falta Imagen-->
-
-                        <a class="col-xs col-md-6" href="lomoalhorno.html"><img src="../../img/solomilloalapimienta.jpg" alt="Lomo"
-                                class="col-12 rounded img-fluid"></a>
-                                <div class="row col-xs col-md-6">
-                        <a class="col" href="lomoalhorno.html">
-                            <p class="col display-4 m-5 text-center card-header p-5">Solomillo de cerdo a la pimienta</p>
-                        </a>
-                        <p>Un plato que ha caído en olvido pero que es una de las recetas más fáciles y rápidas preparadas con solomillo.
-                            Para este plato me gusta prepararlo con solomillo de cerdo, pues queda una carne muy jugosa y suave, 
-                            que acompañada con una salsa de mojar pan y no parar, siempre triunfa.</p>
+                        <a class="col-xs col-md-6" href="lomoalhorno.html"><img src="../../img/solomilloalapimienta.jpg"
+                                alt="Lomo" class="col-12 rounded img-fluid"></a>
+                        <div class="row col-xs col-md-6">
+                            <a class="col" href="lomoalhorno.html">
+                                <p class="col display-4 m-5 text-center card-header p-5">Solomillo de cerdo a la
+                                    pimienta</p>
+                            </a>
+                            <p>Un plato que ha caído en olvido pero que es una de las recetas más fáciles y rápidas
+                                preparadas con solomillo.
+                                Para este plato me gusta prepararlo con solomillo de cerdo, pues queda una carne muy
+                                jugosa y suave,
+                                que acompañada con una salsa de mojar pan y no parar, siempre triunfa.</p>
                         </div>
                     </div>
                 </div>
@@ -104,11 +107,10 @@
             </div>
 
             <div class="col justify-content-center text-center col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
-                <h5 class="text-white">AUTORES</h5>
-                <a class="text-white" href="https://moiruz.github.io/">Moisés Cañete</a><br />
+                <h5 class="text-white">CREADORES</h5>
+                <a class="text-white" href="https://github.com/TitoYus">Rafael Yuste</a><br />
                 <a class="text-white" href="https://a19camoan.github.io/">Andrés Castillero</a><br />
-                <a class="text-white" href="https://manuelsolar.github.io/">Manuel Solar</a><br />
-                <a class="text-white" href="https://sergiovj2001.github.io/">Sergio Vera</a><br />
+                <a class="text-white" href="https://github.com/alejandrorabadan">Alejandro Rabadán</a><br />
             </div>
 
             <div class="col justify-content-end col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
