--- a/cat/verdura/ensaladagarbanzos.html
+++ b/cat/verdura/ensaladagarbanzos.html
@@ -37,7 +37,7 @@
 						<a class="text-warning nav-link" href="../verdura/tempuradeverduras.html">Espinacas a la Crema |</a>
 					</li>
 					<li class="nav-item">
-						<a class="text-warning nav-link" href="../oriental/index.html">Postres</a>
+						<a class="text-warning nav-link" href="../postres/index.html">Postres</a>
 					</li>
 				</ul>
 			</div>
