enlaces logos arreglados

--- a/cat/postres/index.html
+++ b/cat/postres/index.html
@@ -14,7 +14,7 @@
 
     <header class="container-fluid bg-dark">
         <nav class="navbar navbar-dark bg-dark">
-            <a href="../../index.html"><img src="img/logo_cabeza.png" alt="Logo"></a>
+            <a href="../../index.html"><img src="../../img/logo_cabeza.png" alt="Logo"></a>
 
             <div class="text-success display-4 font-weight-bold font-italic text-fluid">Recetas de la Abuela</div>
 
