--- a/cat/carne/flamenquinescordobese.html
+++ b/cat/carne/flamenquinescordobese.html
@@ -13,7 +13,7 @@
 <body class="bg-warning">
 	<header class="container-fluid bg-dark">
 		<nav class="navbar navbar-dark bg-dark">
-			<a href="../../index.html"><img src="img/logo_cabeza.png" alt="Logo"></a>
+			<a href="../../index.html"><img src="../../img/logo_cabeza.png" alt="Logo"></a>
 
 			<div class="text-success display-4 font-weight-bold font-italic text-fluid">Recetas de la Abuela</div>
 
