--- a/index.html
+++ b/index.html
@@ -113,16 +113,10 @@
                     <a class="text-white" href="https://github.com/alejandrorabadan">Alejandro Rabadán</a><br />
                 </div>
 
-                <div class="col justify-content-end col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
+                <div class=" col justify-content-end">
                     <div class=float-right>
-                        <a href="https://www.instagram.com/rdabuela/"><img src="img/instagram.png"
-                                alt="Intagram_logo"></a>
-
-                        <a href="https://www.facebook.com/rdabuela.abuela.3"><img src="img/facebook.png"
-                                alt="Facebook_logo"></a>
-
-                        <a href="https://www.pinterest.es/rdladaw2020/"><img src="img/pinterest.png"
-                                alt="Pinterest_logo"></a>
+                        <a href="#top"><img alt="Flecha"
+                                src="img/flecha.png"></a>
                     </div>
                 </div>
             </div>
