--- a/cat/postres/tartadequeso.html
+++ b/cat/postres/tartadequeso.html
@@ -110,14 +110,10 @@
                 <a class="text-white" href="https://github.com/alejandrorabadan">Alejandro Rabadán</a><br />
             </div>
 
-            <div class=" col justify-content-end col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
+            <div class=" col justify-content-end">
                 <div class=float-right>
-                    <a href="https://www.facebook.com/rdabuela.abuela.3"><img alt="Facebook"
-                            src="../../img/facebook.png"></a>
-                    <a href="https://www.instagram.com/rdabuela/"><img alt="Instagram"
-                            src="../../img/instagram.png"></a>
-                    <a href="https://www.pinterest.es/rdladaw2020/"><img alt="Pinterest"
-                            src="../../img/pinterest.png"></a>
+                    <a href="https://moodle.iesgrancapitan.org/user/profile.php?id=147"><img alt="Flecha"
+                            src="../../img/flecha.png"></a>
                 </div>
             </div>
         </div>
