--- a/cat/verdura/tempuradeverduras.html
+++ b/cat/verdura/tempuradeverduras.html
@@ -37,7 +37,7 @@
                         <a class="text-warning nav-link" href="#">Espinacas a la crema|</a>
                     </li>
                     <li class="nav-item">
-                        <a class="text-warning nav-link" href="../oriental/index.html">Postres</a>
+                        <a class="text-warning nav-link" href="../postres/index.html">Postres</a>
                     </li>
                 </ul>
             </div>
