--- a/cat/carne/lomoalhorno.html
+++ b/cat/carne/lomoalhorno.html
@@ -28,7 +28,7 @@
                         <a class="text-warning nav-link" href="../../index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-						<a class="text-warning nav-link" href="#">| Carne con tomate</a>
+						<a class="text-warning nav-link" href="../carne/flamenquinescordobese.html">| Carne con tomate</a>
                     </li>
                     <li class="nav-item">
                         <a class="text-warning nav-link" href="#">Solomillo de Cerdo |</a>
