--- a/cat/verdura/ensaladagarbanzos.html
+++ b/cat/verdura/ensaladagarbanzos.html
@@ -95,12 +95,11 @@
 				</div>
 					
 				<div class="col justify-content-center text-center col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
-					<h5 class="text-white">AUTORES</h5>
-					<a class="text-white" href="https://moiruz.github.io/">Moisés Cañete</a><br/>
-					<a class="text-white" href="https://a19camoan.github.io/">Andrés Castillero</a><br/>
-					<a class="text-white" href="https://manuelsolar.github.io/">Manuel Solar</a><br/>
-					<a class="text-white" href="https://sergiovj2001.github.io/">Sergio Vera</a><br/>
-				</div>
+                    <h5 class="text-white">CREADORES</h5>
+                    <a class="text-white" href="https://github.com/TitoYus">Rafael Yuste</a><br />
+                    <a class="text-white" href="https://a19camoan.github.io/">Andrés Castillero</a><br />
+                    <a class="text-white" href="https://github.com/alejandrorabadan">Alejandro Rabadán</a><br />
+                </div>
 
 				<div class=" col justify-content-end">
                     <div class=float-right>
